$Id$

v0.71.5		18-Aug-2005


v0.71.4		12-Aug-2005 - 18-Aug-2005

	mbselib.a:
		Removed some debug logging.

	msgbase.a:
		Fixed JAM pack function, the lastread pointers could be wrong
		if the last messages of an area were deleted.

	mbfido:
		Added extra debug logging to trace an SIGSEG when forwarding
		files.
		Added error logmessage in case *.msg path isn't defined.
		Fixed a segfault when echomail.jam or netmail.jam is corrupted
		when scanning for outgoing mail.
		Fixed fido style from address for posting news.
		Reinstalled charset translation on the gateway. Changed the
		way how FTN kludges are translated to RFC headers.
		Dropped support for newsgroup distribution.
		In tic processing changed pointer type for seenby lists.
		Fixed running out of file descriptors when there are lots of
		bad mailpackets.

	mbsebbs:
		Fixed headerlines for posting news.
		Fixed headerlines for posting email.

	mbnntp:
		Improved charset detection.

	mbcico:
		Changed compression init functions to fix mysterious crashes
		on some systems.

	mbsetup:
		Dropped support for newsgroup distribution.


v0.71.3		13-Jun-2005 - 12-Aug-2005

	upgrade:
		Check mbsetup 7.n.3.14 and 7.n.3.15 settings.
		You may limit the mailhistory.html by setting 1.15.8
		Check mbsetup 1.13.4 and 1.13.5, they should be empty or point
		to valid and readable logfiles.
		See also the procedure for version 0.71.2 since now the chat
		code is made final!
		Enter setup menu 8.4 once and leave to clear unused data.

	mbselib.a:
		Added a function to clean subject lines from garbage, trailing
		spaces etc. to improve message linking.
		Made Internet BBS Chat final.

	mbcico:
		Added support for binkp GZ and BZ2 compression. Can be turned
		off per node. Only effective with originating calls. Incoming
		calls follow the remote.
		Increased binkp timeout from 180 to 300 seconds.

	mbsebbs:
		Added logging of remote host and terminal.
		Added subject line clean in several places.

	mbnewuser: